@@ -283,26 +283,49 @@ describe Paperclip::Storage::S3 do
   end
 
   context "use_accelerate_endpoint" do
-    before do
-      rebuild_model storage: :s3,
-        s3_credentials: {},
-        bucket: "bucket",
-        path: ":attachment/:basename:dotextension",
-        s3_host_name: "s3-accelerate.amazonaws.com",
-        s3_region: "ap-northeast-1",
-        use_accelerate_endpoint: true
-      @dummy = Dummy.new
-      @dummy.avatar = stringy_file
-      @dummy.stubs(:new_record?).returns(false)
+    context "defaults to false" do
+      before do
+        rebuild_model storage: :s3,
+          s3_credentials: {},
+          bucket: "bucket",
+          path: ":attachment/:basename:dotextension",
+          s3_host_name: "s3-ap-northeast-1.amazonaws.com",
+          s3_region: "ap-northeast-1"
+        @dummy = Dummy.new
+        @dummy.avatar = stringy_file
+        @dummy.stubs(:new_record?).returns(false)
+      end
+
+      it "returns a url based on an :s3_host_name path" do
+        assert_match %r{^//s3-ap-northeast-1.amazonaws.com/bucket/avatars/data[^\.]}, @dummy.avatar.url
+      end
+
+      it "uses the S3 client with the use_accelerate_endpoint config is true" do
+        expect(@dummy.avatar.s3_bucket.client.config.use_accelerate_endpoint).to be(false)
+      end
     end
 
-    it "returns a url based on an :s3_host_name path" do
-      assert_match %r{^//s3-accelerate.amazonaws.com/bucket/avatars/data[^\.]}, @dummy.avatar.url
-    end
+    context "set to true" do
+      before do
+        rebuild_model storage: :s3,
+          s3_credentials: {},
+          bucket: "bucket",
+          path: ":attachment/:basename:dotextension",
+          s3_host_name: "s3-accelerate.amazonaws.com",
+          s3_region: "ap-northeast-1",
+          use_accelerate_endpoint: true
+        @dummy = Dummy.new
+        @dummy.avatar = stringy_file
+        @dummy.stubs(:new_record?).returns(false)
+      end
 
-    it "uses the S3 bucket with the correct host name" do
-      assert_equal "s3-accelerate.amazonaws.com",
-        @dummy.avatar.s3_bucket.client.config.endpoint.host
+      it "returns a url based on an :s3_host_name path" do
+        assert_match %r{^//s3-accelerate.amazonaws.com/bucket/avatars/data[^\.]}, @dummy.avatar.url
+      end
+
+      it "uses the S3 client with the use_accelerate_endpoint config is true" do
+        expect(@dummy.avatar.s3_bucket.client.config.use_accelerate_endpoint).to be(true)
+      end
     end
   end
 
